[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aov-dec"
version = "1.0.0"
description = "Compress/Decompress AOV File"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["zstandard", "pycryptodome"]
authors = [
  {name = "Vinh LC"}
]

[tool.setuptools]
packages = ["aov_dec"]
